Teste de commit

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,16 +16,6 @@
         <br>desafios como esse venho descobrindo o que o desenvolvimento front 
         <br>tem a oferecer par o mundo! </h3>
     </div>
-    <div>
-        <h1>Como falar comigo?</h1>
-        <ul>
-           <li><img src="lista1.jpg" alt="Item 1"> 
-            Meu github
-           </li> 
-           <li>Meu instagram
-               
-           </li> 
-        </ul>
-    </div>
+   
 </body>
 </html>
