Alterações na página
Foram usados os seguintes requisitos
-Uso de fivacon.
-Imagem 150x150.
-Conter parágrafo.
-Colocar nome em negrito.
-Fazer lista com imagens e links externos.

--- a/index.html
+++ b/index.html
@@ -5,17 +5,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quem sou eu</title>
+    <link rel="shortcut icon" href="icon-favicon/favicon.ico" type="image/x-icon">
+    <title>Ana Carolina</title>
 </head>
 <body>
     <h1>Quem sou eu?</h1>
-    <img src="Perfil.jpg" alt="Meu perfil">
-    <div>
-        <h3>Olá, meu nome é Carol, e estou iniciando nesse mundo de tecnologia.
-        <br>Descobri que essa é a área que quero pra minha vida, e por meio de
-        <br>desafios como esse venho descobrindo o que o desenvolvimento front 
-        <br>tem a oferecer par o mundo! </h3>
-    </div>
-   
+   <img src="img/perfil-reduzido.jpg" alt="Meu Perfil">
+   <pre>
+    <p>
+             Olá, meu nome é <strong>Ana Carolina</strong>, e estou iniciando nesse mundo de tecnologia.
+            Descobri que essa é a área que quero pra minha vida, e por meio de
+            desafios como esse venho descobrindo o que o desenvolvimento front
+            tem a oferecer par o mundo!
+    </p>
+    <p>
+             Estou adquirindo conhecendo de HTML5 E CSS3 no momento.
+    </p>
+   </pre>
+   <h2>Onde me encontra?</h2>
+   <ul>
+       <li><img src="img/github-reduzido.png" alt="Meu Github">
+       <a href="https://github.com/CarolinaOlivaCruz" target="_blank" rel="external">Meu Github</a></li>
+       <li><img src="img/linkedin-reduzido.png" alt="Meu Linkendin">
+       <a href="https://www.linkedin.com/in/ana-carolina-cruz-957a42229/" target="_blank" rel="external">Meu Linkedin</a></li>
+       <li><img src="img/instagram-reduzido.jpg" alt="Meu Instagram">
+       <a href="https://www.instagram.com/c.a.r.o.l_c.z/" target="_blank" rel="external">Meu Instagram</a></li>
+   </ul>
 </body>
 </html>
