--- a/index.html
+++ b/index.html
@@ -6,25 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="icon-favicon/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <title>Meu Perfil</title>
 </head>
 <body>
-    <h1>Quem sou eu?</h1>
-   <img src="img/perfil-reduzido.jpg" alt="Meu Perfil">
-   <pre>
-    <p>
-             Olá, meu nome é <strong>Ana Carolina</strong>, eu tenho 25 anos e venho me dedicando muito para obter conhecimento 
-             na área de desenvolvimento web Front End. 
+    <div class="texto">
+        <h1>Quem sou eu?</h1>
+           <img src="img/perfil-reduzido.jpg" alt="Meu Perfil">
+           <pre>
+        <p>
+                 Olá, meu nome é <strong>Ana Carolina</strong>, eu tenho 25 anos e venho
+                me dedicando muito para obter conhecimento na área de desenvolvimento web Front-End.
 
-             No meu Github segue alguns dos meus projetos usando HTML, CSS e JavaScript.
-    </p>
-   </pre>
-   <h2>Onde me encontrar?</h2>
-   <ul>
-       <li><img src="img/github-reduzido.png" alt="Meu Github">
-       <a href="https://github.com/CarolinaOlivaCruz" target="_blank" rel="external">Meu Github</a></li>
-       <li><img src="img/linkedin-reduzido.png" alt="Meu Linkendin">
-       <a href="https://www.linkedin.com/in/ana-carolina-cruz-957a42229/" target="_blank" rel="external">Meu Linkedin</a></li>
-   </ul>
+                 No meu Github segue alguns dos meus projetos usando HTML, CSS e JavaScript.
+        </p>
+           </pre>
+           <h2>Onde me encontrar?</h2>
+    </div>
+   <div class="link">
+       <ul>
+           <li><img src="img/github-reduzido.png" alt="Meu Github">
+           <a href="https://github.com/CarolinaOlivaCruz" target="_blank" rel="external">Meu Github</a></li>
+           <li><img src="img/linkedin-reduzido.png" alt="Meu Linkendin">
+           <a href="https://www.linkedin.com/in/ana-carolina-cruz-957a42229/" target="_blank" rel="external">Meu Linkedin</a></li>
+       </ul>
+   </div>
 </body>
-</html>
+</html> 
