alteração do background

--- a/index.html
+++ b/index.html
@@ -20,16 +20,25 @@
 
                  No meu Github segue alguns dos meus projetos usando HTML, CSS e JavaScript.
         </p>
+
+
+
+
+
+
+
+
            </pre>
+
            <h2>Onde me encontrar?</h2>
     </div>
    <div class="link">
-       <ul>
-           <li><img src="img/github-reduzido.png" alt="Meu Github">
-           <a href="https://github.com/CarolinaOlivaCruz" target="_blank" rel="external">Meu Github</a></li>
-           <li><img src="img/linkedin-reduzido.png" alt="Meu Linkendin">
-           <a href="https://www.linkedin.com/in/ana-carolina-cruz-957a42229/" target="_blank" rel="external">Meu Linkedin</a></li>
-       </ul>
+      
+           <img src="img/github-reduzido.png" alt="Meu Github">
+           <a href="https://github.com/CarolinaOlivaCruz" target="_blank" rel="external">Meu Github</a>
+           <img src="img/linkedin-reduzido.png" alt="Meu Linkendin">
+           <a href="https://www.linkedin.com/in/ana-carolina-cruz-957a42229/" target="_blank" rel="external">Meu Linkedin</a>
+       
    </div>
 </body>
 </html> 
