--- a/index.html
+++ b/index.html
@@ -1,44 +1,43 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="icon-favicon/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <title>Meu Perfil</title>
 </head>
+
 <body>
-    <div class="texto">
-        <h1>Quem sou eu?</h1>
-           <img src="img/perfil-reduzido.jpg" alt="Meu Perfil">
-           <pre>
-        <p>
-                 Olá, meu nome é <strong>Ana Carolina</strong>, eu tenho 25 anos e venho
-                me dedicando muito para obter conhecimento na área de desenvolvimento web Front-End.
+    <header class="container-header">
+        <figure>
+            <img src="img/fundo-branco.png" alt="">
+        </figure>
+    </header>
 
-                 No meu Github segue alguns dos meus projetos usando HTML, CSS e JavaScript.
-        </p>
+    <main class="container-main">
+        <section class="container-perfil">
+            <div class="img-perfil">
+                <img src="img/perfil-original.jpg" alt="">
+            </div>
+        </section>
 
+        <section class="container-text">
+            <h1>Quem sou eu?</h1>
+            <p>O</p>
+            <p>Estudante de Desenvolvimento Web</p>
+            <p>Aluna da Kenzie</p>
+        </section>
 
+        <section class="container-links">
+            <h1>Onde me encontrar?</h1>
+            <ul>
+                <li><a href="https://github.com/CarolinaOlivaCruz">Meu Github</a></li>
+                <li><a href="https://www.linkedin.com/in/ana-carolina-c-957a42229/">Meu Linkedin</a></li>
+            </ul>
+        </section>
 
-
-
-
-
-
-           </pre>
-
-           <h2>Onde me encontrar?</h2>
-    </div>
-   <div class="link">
-      
-           <img src="img/github-reduzido.png" alt="Meu Github">
-           <a href="https://github.com/CarolinaOlivaCruz" target="_blank" rel="external">Meu Github</a>
-           <img src="img/linkedin-reduzido.png" alt="Meu Linkendin">
-           <a href="https://www.linkedin.com/in/ana-carolina-cruz-957a42229/" target="_blank" rel="external">Meu Linkedin</a>
-       
-   </div>
-</body>
-</html> 
+    </main>
