--- a/index.html
+++ b/index.html
@@ -21,23 +21,29 @@
     <main class="container-main">
         <section class="container-perfil">
             <div class="img-perfil">
-                <img src="img/perfil-original.jpg" alt="">
+                <img src="img/foto-perfil.jpg" alt="">
             </div>
         </section>
 
         <section class="container-text">
             <h1>Quem sou eu?</h1>
-            <p>O</p>
-            <p>Estudante de Desenvolvimento Web</p>
-            <p>Aluna da Kenzie</p>
+            <p>Olá, me chamo Ana Carolina, tenho 25 anos.</p>
+            <p>Antes de entrar no mundo da programação, trabalhava com artesanato. </p>
+            <p>Hoje, sou aluna da Kenzie Academy, e estou me formando em Desenvolvimento Web Full Stack</p>
         </section>
 
         <section class="container-links">
             <h1>Onde me encontrar?</h1>
             <ul>
-                <li><a href="https://github.com/CarolinaOlivaCruz">Meu Github</a></li>
-                <li><a href="https://www.linkedin.com/in/ana-carolina-c-957a42229/">Meu Linkedin</a></li>
+                <li>
+                    <img src="img/github.png" alt="">
+                    <a href="https://github.com/CarolinaOlivaCruz">Meu Github</a>
+                </li>
+
+                <li>
+                    <img src="img/linkedin.png" alt="">
+                    <a href="https://www.linkedin.com/in/ana-carolina-c-957a42229/">Meu Linkedin</a>
+                </li>
             </ul>
         </section>
-
     </main>
